# tp-final-argentum

./: CMakeLists.txt  README.md  install.sh
src/Cliente/: CMakeLists.txt  main.cpp
src/Cliente/include/: client_qt_characterlogin.h  client_qt_loginmediator.h  client_qt_serverlogin.h
src/Cliente/sdl/src/: dot.cpp  main_motion.cpp  sdl_npc.cpp  sdl_npc.h  sdl_texture.cpp  sdl_texture.h  sdl_window.h
src/Cliente/src/: client_qt_characterlogin.cpp  client_qt_loginmediator.cpp  client_qt_serverlogin.cpp  main.cpp
src/Cliente/ui/: client_qt_characterlogin.ui
src/Common/: ActionMessageSerializer.h  BlockingQueue.h  CMakeLists.txt  ClosedQueueException.cpp  ClosedQueueException.h  CommandMessageSerializer.cpp  CommandMessageSerializer.h  ConnectMessageSerializer.cpp  ConnectMessageSerializer.h  ConsoleOutputMessageSerializer.cpp  DrawMessageSerializer.cpp  EquipmentMessageSerializer.h  InventoryMessageSerializer.cpp  LoginMessageSerializer.cpp  Message.cpp  Message.h  MessageSerializer.cpp  MessageSerializer.h  MovementMessageSerializer.h  OsException.cpp  OsException.h  Protocol.cpp  Protocol.h  Serializer.h  Socket.cpp  SpawnPcMessageSerializer.h  SpawnStaticObjectsMessageSerializer.cpp  SpawnStaticObjectsMessageSerializer.h  StatsMessageSerializer.cpp  StatsMessageSerializer.h  Thread.cpp  Thread.h  UseItemMessageSerializer.h  common_proxy_socket.cpp  common_proxy_socket.h  message_structs.h
src/Common/Messages/: Message.cpp  Message.h  message_structs.h
src/Common/Serializers/: ActionMessageSerializer.cpp  ActionMessageSerializer.h  CommandMessageSerializer.cpp  ConnectMessageSerializer.cpp  ConnectMessageSerializer.h  ConsoleOutputMessageSerializer.h  CreateMessageSerializer.cpp  CreateMessageSerializer.h  DisconnectMessageSerializer.cpp  DisconnectMessageSerializer.h  DrawMessageSerializer.cpp  EquipmentMessageSerializer.cpp  EquipmentMessageSerializer.h  InventoryMessageSerializer.h  LoginMessageSerializer.h  MessageSerializer.cpp  MessageSerializer.h  MovementMessageSerializer.h  Serializer.h  SpawnPcMessageSerializer.cpp  SpawnStaticObjectsMessageSerializer.h  UseItemMessageSerializer.cpp  UseItemMessageSerializer.h
src/Proxy/: CMakeLists.txt
src/Proxy/Qt/: CMakeLists.txt
src/Proxy/Qt/include/: client_qt_characterlogin.h  client_qt_loginmediator.h  client_qt_serverlogin.h  loginform.h  mainwindow.h
src/Proxy/Qt/src/: QtServer.cpp  QtServer.h  charactercreationform.cpp  client_qt_charactercreation.cpp  client_qt_characterlogin.cpp  client_qt_loginmediator.cpp  client_qt_serverlogin.cpp  loginform.cpp  main.cpp  mainwindow.cpp  server_main.cpp
src/Proxy/Qt/ui/: client_qt_characterlogin.ui  client_qt_serverlogin.ui
src/Proxy/assets/: resources.qrc
src/Proxy/config/: config.json
src/Proxy/src/: Tareas  client_client.cpp  client_client.h  client_command.cpp  client_command.h  client_command_factory.cpp  client_command_factory.h  client_console_command_state.cpp  client_console_command_state.h  client_event_mediator.cpp  client_event_mediator.h  client_gui.cpp  client_gui.h  client_imediator.cpp  client_imediator.h  client_iobserver.h  client_main.cpp  client_protected_list.h  client_protected_queue.cpp  client_protected_queue.h  client_sdl_audio_manager.cpp  client_sdl_audio_manager.h  client_sdl_bar.cpp  client_sdl_bar.h  client_sdl_button.cpp  client_sdl_button.h  client_sdl_camera.cpp  client_sdl_camera.h  client_sdl_chunk.cpp  client_sdl_chunk.h  client_sdl_console.cpp  client_sdl_console.h  client_sdl_dynamic_renderable.cpp  client_sdl_dynamic_renderable.h  client_sdl_effect.cpp  client_sdl_effect.h  client_sdl_exception.cpp  client_sdl_inventory.cpp  client_sdl_inventory.h  client_sdl_keyboard.cpp  (+56 more)
src/Server/: CMakeLists.txt  main.cpp
src/Server/Connection/: ClientConnection.h  ProtectedConnections.cpp  Server.cpp  Server.h  ThAcceptor.h  ThClientReceiver.cpp  ThClientReceiver.h
src/Server/Model/: Configuration.cpp  Configuration.h  Factory.cpp  Factory.h  Game.cpp  Game.h  Observer.h  PersistanceManager.cpp  PersistanceManager.h
src/Server/Model/Character/: Alive.cpp  Armour.h  Banker.h  (+18 more)
src/Server/config/: config.json  miMapa.json
src/Servidor/: CMakeLists.txt  main.cpp
src/Servidor/Common/: CMakeLists.txt  Utils.cpp  Utils.h
src/Servidor/Conexion/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  CommandMessageSerializer.cpp  CommandMessageSerializer.h  ConnectMessageSerializer.cpp  ConnectMessageSerializer.h  ConsoleOutputMessageSerializer.cpp  ConsoleOutputMessageSerializer.h  DrawMessageSerializer.cpp  DrawMessageSerializer.h  EquipmentUpdateMessageSerializer.cpp  EquipmentUpdateMessageSerializer.h  InventoryUpdateMessageSerializer.cpp  InventoryUpdateMessageSerializer.h  MessageSerializer.cpp  MessageSerializer.h  MovementMessageSerializer.cpp  MovementMessageSerializer.h  NpcMovementMessageSerializer.cpp  NpcMovementMessageSerializer.h  PlayerAttackMessageSerializer.cpp  PlayerAttackMessageSerializer.h  ProtectedConnections.cpp  ProtectedConnections.h  Protocol.cpp  Protocol.h  Serializer.h  Server.cpp  Server.h  SpawnCityCharactersMessageSerializer.cpp  SpawnCityCharactersMessageSerializer.h  SpawnDropsMessageSerializer.cpp  SpawnDropsMessageSerializer.h  SpawnNpcMessageSerializer.cpp  SpawnNpcMessageSerializer.h  SpawnPcMessageSerializer.cpp  SpawnPcMessageSerializer.h  SpawnStaticObjectMessageSerializer.cpp  SpawnStaticObjectMessageSerializer.h  (+11 more)
src/Servidor/Modelo/: Alive.cpp  Alive.h  Armour.cpp  Armour.h  BankAccount.cpp  BankAccount.h  Banker.cpp  Banker.h  BuyCommand.cpp  BuyCommand.h  CMakeLists.txt  Calculator.cpp  Calculator.h  Character.cpp  Character.h  City.cpp  City.h  Command.h  CommandExecutor.cpp  CommandExecutor.h  Configuration.h  Damage.cpp  Damage.h  DepositCommand.cpp  DepositCommand.h  Direccion.cpp  Direccion.h  Drop.cpp  Drop.h  DropItemCommand.cpp  DropItemCommand.h  Equippable.cpp  Equippable.h  Event.h  EventMove.cpp  EventMove.h  ExtractCommand.cpp  ExtractCommand.h  Factory.cpp  Factory.h  (+98 more)
src/Servidor/config/: character.json  config.json  json_big_desert_map.json  mapa.json  objetos.json
(+203 files in other folders)
