project(argentum)

set(SERIALIZERSSOURCES
        Serializer.h
        MessageSerializer.h
        MessageSerializer.cpp
        ConnectMessageSerializer.h
        ConnectMessageSerializer.cpp
        DrawMessageSerializer.h
        DrawMessageSerializer.cpp
        MovementMessageSerializer.h
        MovementMessageSerializer.cpp
        SpawnPcMessageSerializer.h
        SpawnPcMessageSerializer.cpp
        SpawnStaticObjectsMessageSerializer.h
        SpawnStaticObjectsMessageSerializer.cpp
        StatsMessageSerializer.h
        StatsMessageSerializer.cpp
        InventoryMessageSerializer.h
        InventoryMessageSerializer.cpp
        CommandMessageSerializer.h
        CommandMessageSerializer.cpp
        ActionMessageSerializer.h
        ActionMessageSerializer.cpp
        ConsoleOutputMessageSerializer.h
        ConsoleOutputMessageSerializer.cpp
        EquipmentMessageSerializer.h
        EquipmentMessageSerializer.cpp
        UseItemMessageSerializer.h
        UseItemMessageSerializer.cpp
        LoginMessageSerializer.h
        LoginMessageSerializer.cpp)


add_library(commonLib
            common_proxy_socket.h
            common_proxy_socket.cpp
            Utils.h
            Utils.cpp
            BlockingQueue.h
            ClosedQueueException.h
            ClosedQueueException.cpp
            Message.h
            Message.cpp
            OsException.h
            OsException.cpp
            Socket.h
            Socket.cpp
            Thread.h
            Thread.cpp
            Protocol.h
            Protocol.cpp
            ${SERIALIZERSSOURCES})