project(argentum)

include_directories(Messages)
include_directories(Serializers)

set(SERIALIZERSSOURCES
        Serializers/Serializer.h
        Serializers/MessageSerializer.h
        Serializers/MessageSerializer.cpp
        Serializers/DrawMessageSerializer.h
        Serializers/DrawMessageSerializer.cpp
        Serializers/MovementMessageSerializer.h
        Serializers/MovementMessageSerializer.cpp
        Serializers/SpawnPcMessageSerializer.h
        Serializers/SpawnPcMessageSerializer.cpp
        Serializers/SpawnStaticObjectsMessageSerializer.h
        Serializers/SpawnStaticObjectsMessageSerializer.cpp
        Serializers/StatsMessageSerializer.h
        Serializers/StatsMessageSerializer.cpp
        Serializers/InventoryMessageSerializer.h
        Serializers/InventoryMessageSerializer.cpp
        Serializers/CommandMessageSerializer.h
        Serializers/CommandMessageSerializer.cpp
        Serializers/ActionMessageSerializer.h
        Serializers/ActionMessageSerializer.cpp
        Serializers/ConsoleOutputMessageSerializer.h
        Serializers/ConsoleOutputMessageSerializer.cpp
        Serializers/EquipmentMessageSerializer.h
        Serializers/EquipmentMessageSerializer.cpp
        Serializers/UseItemMessageSerializer.h
        Serializers/UseItemMessageSerializer.cpp
        Serializers/LoginMessageSerializer.h
        Serializers/LoginMessageSerializer.cpp
        Serializers/CreateMessageSerializer.h
        Serializers/CreateMessageSerializer.cpp
        Serializers/DisconnectMessageSerializer.h
        Serializers/DisconnectMessageSerializer.cpp)


add_library(commonLib
            common_proxy_socket.h
            common_proxy_socket.cpp
            Utils.h
            Utils.cpp
            BlockingQueue.h
            ClosedQueueException.h
            ClosedQueueException.cpp
            Messages/Message.h
            Messages/Message.cpp
            OsException.h
            OsException.cpp
            Socket.h
            Socket.cpp
            Thread.h
            Thread.cpp
            Protocol.h
            Protocol.cpp
            ${SERIALIZERSSOURCES})